# fishfish-rs

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/client/: auth_client.rs  client.rs  default_client.rs  mod.rs
src/data/: category.rs  domain.rs  mod.rs  permissions.rs  status.rs  token.rs  url.rs
src/endpoints/: create_domain.rs  create_session.rs  delete_domain.rs  get_domains.rs  get_status.rs  mod.rs  update_domain.rs
src/request/: endpoint.rs  mod.rs  web_request.rs
