[package]
name = "fishfish"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "fishfish-test"
path = "src/main.rs"

[lib]
name = "fishfish"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.57"
thiserror = "1.0.37"
derive_builder = "0.11.2"